--- a/.github/workflows/x86_64_immortalwrt-docker.yml
+++ b/.github/workflows/x86_64_immortalwrt-docker.yml
@@ -30,8 +30,8 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
+  REPO_BRANCH: openwrt-18.06-k5.4
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: x86_64/x86_64_immortalwrt-docker.config
   DIY_P1_SH: diy-part1.sh
