--- a/.github/workflows/Almighty_RedMi_AX6.yml
+++ b/.github/workflows/Almighty_RedMi_AX6.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: RedMi_AX6
+name: Almighty_RedMi_AX6
 
 on:
   repository_dispatch:
@@ -30,7 +30,7 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/Boos4721/openwrt
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/RedMi_AX6.config
