--- a/.github/workflows/AX6S.yml
+++ b/.github/workflows/AX6S.yml
@@ -192,7 +192,8 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           🚀 Autobuild | 自动编译
-          AX6s固件编译由于AX6s需要应用Patch来更改固件OOB_Size，因而单独开一仓库用于编译。 新Patch，优化分区：ax6s_namidairo1.patch
+          AX6s固件编译由于AX6s需要应用Patch来更改固件OOB_Size，因而单独开一仓库用于编译。
+          新Patch，优化分区：ax6s_namidairo1.patch
 
           Installation:
 
