--- a/.github/workflows/AX6S.yml
+++ b/.github/workflows/AX6S.yml
@@ -38,8 +38,9 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/namidairo/openwrt
+  REPO_BRANCH: ax6s
+  FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6S.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
