--- a/.github/workflows/AX6S.yml
+++ b/.github/workflows/AX6S.yml
@@ -38,8 +38,8 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/namidairo/openwrt
-  REPO_BRANCH: ax6s
+  REPO_URL: https://github.com/MeIsReallyBa/immortalwrt
+  REPO_BRANCH: openwrt-18.06-k5.4
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6S.config
   DIY_P1_SH: diy-part1.sh
@@ -92,12 +92,12 @@ jobs:
 #        echo "::set-env name=useVersionInfo::$useVersionInfo"
 #        echo "::set-env name=DATE::$(date "+%Y-%m-%d %H:%M:%S")"
 
-    - name: Apply patch
-      working-directory: /workdir
-      if: (github.event.inputs.need_patch == 'true' && github.event.inputs.need_patch  != 'false') 
-      run: |
-        cd openwrt
-        git apply $GITHUB_WORKSPACE/${{ github.event.inputs.patch_filename }}
+#    - name: Apply patch
+#      working-directory: /workdir
+#      if: (github.event.inputs.need_patch == 'true' && github.event.inputs.need_patch  != 'false') 
+#      run: |
+#        cd openwrt
+#        git apply $GITHUB_WORKSPACE/${{ github.event.inputs.patch_filename }}
 
     - name: Load custom feeds
       run: |
