--- a/.github/workflows/AX6S.yml
+++ b/.github/workflows/AX6S.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: Redmi_AX6s_Namidairo_Patch
+name: Redmi_AX6s
 
 on:
   repository_dispatch:
